hphp/test/zend/good/ext/xmlreader/tests/011.php.skipif
<?hh
<<__EntryPoint>>
function main(): void {
  if (!extension_loaded("xmlreader")) die("skip");
  $reader = new XMLReader();
  if (!method_exists($reader, 'readInnerXML')) die("skip");
}
