hphp/test/zend/bad/ext/xmlreader/tests/expand.php.skipif
<?php if (!extension_loaded("xmlreader")) print "skip";
if (!extension_loaded("dom")) print "skip DOM extension required";
$reader = new XMLReader();
if (!method_exists($reader, 'expand')) print "skip";
?>